test/semantic_errors/invalid_abbreviation4.mc
void main() {
    char i;
    ++i; /* pre-increment a char */
}